# nultr-iced-client

./: Cargo.toml  README.md  client-config.toml
client_app/: Cargo.toml
client_app/src/: config.rs  main.rs
client_app/src/http/: api.rs  mod.rs  models.rs
client_app/src/ui/: view.rs
client_app/src/ui/parts/: mod.rs
client_app/src/ui/parts/chat/: mod.rs  view.rs
client_app/src/ui/parts/login_form/: mod.rs  view.rs
client_app/src/ui/theme/: mod.rs
client_app/src/ws/: client.rs  controller.rs
client_util/: Cargo.toml
client_util/src/: lib.rs
src/: api.rs  app_theme.rs  auth.rs  chat.rs  config.rs  controller.rs  logger.rs  main.rs  theme.rs  util.rs
src/controller/: mod.rs  websocket.rs
src/http/: api.rs  mod.rs  models.rs
src/ui/: app.rs  mod.rs  render.rs  theme.rs  util.rs  view.rs  widgets.rs
src/ui/parts/: mod.rs
src/ui/parts/chat/: mod.rs  view.rs
src/ui/parts/error_popup/: mod.rs  view.rs
src/ui/parts/login_form/: mod.rs  view.rs
src/ui/theme/: mod.rs
src/ws/: client.rs  controller.rs  mod.rs
