[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["url"] }
tokio-util = "0.7.15"
toml = "0.8.22"
url = { version = "2.5.4", features = ["std", "serde"] }
