[package]
name = "nultr-iced-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio", "svg"] }
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["url"] }
tokio-util = "0.7.15"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["std", "serde"] }
url_serde = "0.2.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
nultr-procmacro-lib = { path = "../procmacro-lib" }
nultr-shared-lib = { path = "../shared-lib" }
nultr-client-lib = { path = "../client-lib" }
rust-api-integrator = { path = "../rust-api-integrator", features = []}
